<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UpcomingFragment"
    android:orientation="vertical"
    android:paddingStart="23dp"
    android:paddingEnd="32dp"
    android:background="@color/white">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="21dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/crs" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/google_sans_regular"
                android:text="@string/launch_text"
                android:textColor="@color/red"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/starlink_2_text"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/google_sans_regular"
                android:text="@string/ccaex_text"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/google_sans_regular"
                android:text="@string/date_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_date_title"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:fontFamily="@font/google_sans_regular"
        android:layout_marginTop="53dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_date_value"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/google_sans_regular"
        android:layout_marginTop="11dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_site_title"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:fontFamily="@font/google_sans_regular"
        android:layout_marginTop="11dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_site_value"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/google_sans_regular"
        android:layout_marginTop="11dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_down_title"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:fontFamily="@font/google_sans_regular"
        android:layout_marginTop="11dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_down_value"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/google_sans_regular"
        android:layout_marginTop="11dp"/>
</LinearLayout>