<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/crs" />

        <TextView
            android:id="@+id/tv_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="19dp"
            android:fontFamily="@font/google_sans_medium"
            android:text="@string/launch_text"
            android:textColor="@color/red"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/iv_picture"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rocket_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/google_sans_bold"
            android:text="@string/starlink_2_text"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/iv_picture"
            app:layout_constraintTop_toBottomOf="@+id/tv_launch" />

        <TextView
            android:id="@+id/tv_complex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/ccaex_text"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/iv_picture"
            app:layout_constraintTop_toBottomOf="@+id/tv_rocket_name" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/google_sans_regular"
            android:text="@string/date_text"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_picture"
            app:layout_constraintTop_toBottomOf="@+id/tv_complex" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>